--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,88 @@
-h1 {
-    font-family: 'Montserrat-Black', sans-serif;
-    font-size: 3rem;
-    font-weight: 900;
-    line-height: 1.5;
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
+#title {
+    background-color: #ff4c68;
+    color: #fff;
 }
 
 .container-fluid {
     padding: 3% 15%;
 }
 
-#title {
-    background-color: #ff4c68;
+h1 {
+    font-family: 'Montserrat-Black', sans-serif;
+    font-size: 3.5rem;
+    font-weight: 900;
+    line-height: 1.5;
+}
+
+
+/* Navigation bar */
+
+.navbar {
+    padding: 0 0 4.5rem;
+}
+
+.navbar-brand {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 2.5rem;
+    font-weight: bold;
+} 
+
+.nav-item {
+    padding: 0 18px;
+}
+
+.nav-link {
+    font-family: 'Montserrat-Light', sans-serif;
+    font-size: 1.2rem;
+}
+
+
+/* Download Buttons */
+
+.download-button {
+    margin: 5% 3% 5% 0%;
+}
+
+
+/* Title Image */
+
+.title-image {
+    margin-left: 50px;
+    transform: rotate(25deg);
+    width: 50%;
+}
+
+
+/* Features */
+
+#features {
+    padding: 7% 15%;
+}
+
+.feature-item {
+    padding: 4.5%;
+    text-align: center;
+}
+
+.feature-icon {
+    color: #ef8172;
+    margin-bottom: 1rem;
+}
+
+.feature-icon:hover {
+    color: #ff4c68;
+}
+
+.feature-title {
+    font-family: 'Montserrat-Bold', sans-serif;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+.feature-content {
+    color: #8f8f8f;
 }
