--- a/css/styles.css
+++ b/css/styles.css
@@ -8,12 +8,19 @@ body {
 }
 
 .container-fluid {
-    padding: 3% 15%;
+    padding: 3% 15% 7%;
 }
 
 h1 {
     font-family: 'Montserrat-Black', sans-serif;
     font-size: 3.5rem;
+    font-weight: 900;
+    line-height: 1.5;
+}
+
+h2 {
+    font-family: 'Montserrat-Bold', sans-serif;
+    font-size: 3rem;
     font-weight: 900;
     line-height: 1.5;
 }
@@ -51,16 +58,20 @@ h1 {
 /* Title Image */
 
 .title-image {
-    margin-left: 50px;
     transform: rotate(25deg);
-    width: 50%;
+    width: 20%;
+    position: absolute;
+    right: 25%;
 }
 
 
-/* Features */
+/* Features Section */
 
 #features {
     padding: 7% 15%;
+    background-color: #fff;
+    position: relative;
+    /* z-index: 1; Since the feature section is below title sectiion, the feature section stacks on top of title section   */
 }
 
 .feature-item {
@@ -84,5 +95,102 @@ h1 {
 }
 
 .feature-content {
+    color: #8f8f8f;
+}
+
+
+/* Testimonial Section */
+
+#testimonials {
+    background-color: #ef8172;
+    color: #fff;
+    text-align: center;
+}
+
+.testimonial-image {
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+
+.carousel-item { 
+    padding: 7% 15%;
+}
+
+
+/* Press Section */
+
+#press {
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+}
+
+.press-logo {
+    width: 15%;
+    padding: 20px 20px 50px;
+}
+
+
+/* Pricing Section */
+
+#pricing {
+    padding: 100px;
+    text-align: center;
+}
+
+.pricing-column {
+    padding: 3% 2%;
+}
+
+
+/* For mobile to laptop transition */
+
+@media (max-width: 1028px) {
+    #title {
+        text-align: center;
+    }
+
+    .title-image {
+        position: static;
+        transform: rotate(0);
+        width: 50%;
+    }
+}
+
+
+/* Call to Action Section  */
+
+#cta {
+    background-color: #ff4c68;
+    color: #fff;
+    padding: 7% 15%;
+    text-align: center;
+}
+
+.cta-heading {
+    font-family: 'Montserrat-Black', sans-serif;
+    font-size: 3.5rem;
+    font-weight: 900;
+    line-height: 1.5;
+}
+
+
+
+/* Footer section */
+
+#footer {
+    background-color: #fff;
+    text-align: center;
+    padding: 7% 14%;
+}
+
+.footer-icon {
+    font-size: 1.2rem;
+    margin: 20px 10px;
+}
+
+.copyright {
+    font-size: 1rem;
     color: #8f8f8f;
 }
